Diversos cambios sobre el rol mariadb

--- a/roles/mariadb/defaults/main.yaml
+++ b/roles/mariadb/defaults/main.yaml
@@ -1,3 +1,10 @@
-## Módulo 'Mariadb'
-db_root_set_password: no
-db_root_password: 'dba'
+---
+
+##
+## Variables por defecto para el rol: 'mariadb'
+##
+
+db_root_password: 'db@_2020!'
+
+...
+
