Primera versión del rol fail2ban

--- a/deploy_icinga2.yaml
+++ b/deploy_icinga2.yaml
@@ -11,9 +11,10 @@
 
   roles:
     - system
-    - ssh
     - logs
+    - ssh
     - firewall
+    - fail2ban
     - mariadb
     - mariadb_hardening
     - icinga2
