Modificando todos los README y solucionando los errores con las variables de los roles

--- a/roles/apache/tasks/main.yaml
+++ b/roles/apache/tasks/main.yaml
@@ -91,7 +91,7 @@
 
 - name: Copiando la configuración de logrotate
   template:
-    src: apache2.j2
+    src: apache2_logrotate.j2
     dest: /etc/logrotate.d/apache2
     owner: root
     group: root
