--- a/roles/apache/defaults/main.yaml
+++ b/roles/apache/defaults/main.yaml
@@ -1,7 +1,7 @@
 ---
 
 ##
-## Variables por defecto
+## Variables por defecto para el rol
 ##
 
 site_domain: 'monitoring.lab.lan'
@@ -12,7 +12,7 @@ site_cert_key: '/etc/ssl/private/ssl-cert-snakeoil.key'
 
 ## Logrotate
 logs_rotated_dir: '/var/log/log_rotated'
-logs_rotation: 180
+logs_rotation_daily: 180
 logs_max_size: '100M'
 
 ...
