--- a/roles/fail2ban/defaults/main.yaml
+++ b/roles/fail2ban/defaults/main.yaml
@@ -1,14 +1,16 @@
 ---
 
 ##
-## Variables por defecto
+## Variables por defecto para el rol
 ##
 
 ssh_port: 2201
 ssh_tries: 4
 ssh_ban: "5m"
+
+## Logrotate
 logs_rotated_dir: '/var/log/log_rotated'
-logs_rotation: 48
+logs_rotation_weekly: 48
 logs_max_size: '100M'
 
 ...
