--- a/roles/icinga2/tasks/main.yaml
+++ b/roles/icinga2/tasks/main.yaml
@@ -108,4 +108,12 @@
     - ido-mysql
   notify: icinga2 restart
 
+- name: Copiando el logrotate customizado
+  template:
+    src: 'icinga2_logrotate.j2'
+    dest: '/etc/logrotate.d/icinga2'
+    owner: root
+    group: root
+    mode: 0640
+
 ...
