--- a/roles/mariadb/defaults/main.yaml
+++ b/roles/mariadb/defaults/main.yaml
@@ -1,12 +1,18 @@
 ---
 
 ##
-## Variables por defecto para el rol: 'mariadb'
+## Variables por defecto para el rol
 ##
 
 db_root_password: 'db@_2020!'
 db_port: '33006'
 db_remote_access: false
 db_query: false
+
+## Logrotate
+logs_rotated_dir: '/var/log/log_rotated'
+logs_rotation_daily: 180
+logs_rotation_weekly: 48
+logs_max_size: '100M'
 
 ...
