--- a/roles/php/tasks/main.yaml
+++ b/roles/php/tasks/main.yaml
@@ -4,6 +4,9 @@
   apt_repository:
     repo: ppa:ondrej/php
     state: present
+    owner: root
+    group: root
+    mode: 0644
   when: "php_version == '5.6' or php_version == '7.0' or php_version == '7.1' or php_version == '7.3'"
 
 - name: Instalando PHP y sus extensiones
