--- a/roles/php/tasks/main.yaml
+++ b/roles/php/tasks/main.yaml
@@ -27,7 +27,7 @@
       - "php{{ php_version }}-zip"
       - "php{{ php_version }}-json"
       - "libapache2-mod-php{{ php_version }}"
-    state: latest
+    state: present
     update_cache: yes
     force_apt_get: yes
 
