--- a/roles/fail2ban/molecule/default/converge.yml
+++ b/roles/fail2ban/molecule/default/converge.yml
@@ -4,6 +4,9 @@
   hosts: all
   become: true
   become_method: sudo
+  vars:
+    ssh_port: 22
+
   tasks:
     - name: Incluyendo el rol 'fail2ban'
       include_role:
