--- a/roles/icinga2/defaults/main.yaml
+++ b/roles/icinga2/defaults/main.yaml
@@ -4,7 +4,7 @@
 ## Variables por defecto para el rol
 ##
 
-db_user: 'dbaroot'
+db_user: 'root'
 db_user_password: 'db@_2020!'
 db_icinga2: 'db_icinga2'
 db_icinga2_user: 'dba_icinga2'
