--- a/roles/php/tasks/main.yaml
+++ b/roles/php/tasks/main.yaml
@@ -4,8 +4,7 @@
   apt_repository:
     repo: ppa:ondrej/php
     state: present
-    owner: root
-    group: root
+    filename: php
     mode: 0644
   when: "php_version == '5.6' or php_version == '7.0' or php_version == '7.1' or php_version == '7.3'"
 
