Implementando Molecule para el rol icingaweb2

--- a/roles/icingaweb2/molecule/default/molecule.yml
+++ b/roles/icingaweb2/molecule/default/molecule.yml
@@ -8,10 +8,10 @@ driver:
   provider:
     name: virtualbox
 
-#lint: |
-#  set -e
-#    yamllint .
-#    ansible-lint
+lint: |
+ set -e
+   yamllint .
+   ansible-lint
 
 platforms:
   - name: molecule-icingaweb
