--- a/roles/apache/tasks/main.yaml
+++ b/roles/apache/tasks/main.yaml
@@ -23,33 +23,14 @@
     - socache_shmcb
   notify: apache restart
 
-- name: Copiando el virtualhost customizado
+- name: Copiando una plantilla de virtualhost
   template:
     src: virtualhost.j2
-    dest: "/etc/apache2/sites-available/https-{{ site_short_name }}.conf"
+    dest: "/etc/apache2/sites-available/template_https-{{ site_short_name }}.conf"
     owner: root
     group: root
     mode: 0644
   notify: apache restart
-
-- name: Creando el directorio del site
-  file:
-    path: "{{ site_path }}"
-    state: directory
-    owner: www-data
-    group: "www-data"
-    mode: 0750
-
-- name: Creando un archivo en html básico
-  lineinfile:
-    path: "{{ site_path }}/index.html"
-    state: present
-    create: yes
-    owner: www-data
-    group: www-data
-    mode: 0640
-    regexp: '^Apache up and running'
-    line: 'Apache up and running'
 
 - name: Obteniendo los virtualhost habilitados por defecto
   find:
@@ -68,20 +49,16 @@
   when: vhost_enabled['matched'] > 0
   notify: apache restart
 
-- name: Comprobando si está habilitado el virtualhost custom
-  find:
-    paths: '/etc/apache2/sites-enabled/'
-    patterns: "https-{{ site_short_name }}.conf"
-    file_type: link
-  register: vhost_custom
+- name: Eliminando el directorio html por defecto
+  file:
+    path: /var/www/html/
+    state: absent
 
-- name: Habilitando el virtualhost custom
-  command: |
-    a2ensite https-{{ site_short_name }}.conf
-  args:
-    chdir: /etc/apache2/sites-available/
-  when: vhost_custom['matched'] == 0
-  notify: apache restart
+- name: Omitiendo la publicación de la versión de Apache
+  replace:
+    path: /etc/apache2/conf-enabled/security.conf
+    regexp: '^ServerTokens (Full|OS|Minimal|Minor)'
+    replace: 'ServerTokens Prod'
 
 - name: Añadiendo las reglas al firewall
   ufw:
